--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                          <button id="calculateBtn">
                             Calculate Loan <span class="button-icon"><i class="fa-solid fa-arrow-right"></i></span>
                          </button>
+                         <button id="resetBtn" type="button"> <i class="fa-solid fa-arrows-rotate"></i>Reset</button>
                     </div>
                     <!-- results summary -->
                      <div class="results" id="results">
